# StateCNV

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  statecnv-ci.yml  statecnv.yml
docs/: index.md
scripts/: comparison_methods.py
statecnv/: bootstrap.py  state_cnv.py
statescnv/: _utils.py  bootstrap.py  state_cnv.py
tests/: test_sanity.py  test_state_cnv.py
