[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statecnv"
version = "0.1.0"
description = "Bayesian state-space model for CNV classification from targeted sequencing"
authors = [
    { name="Austin Talbot", email="talbota@pillarbiosci.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "particles",
    "matplotlib"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Pillar-Biosciences-Inc/StateCNV"

